# yt-transcriber

./: .gitignore  README.md  languages.py  pyproject.toml  requirements.txt  transcriber.py
src/: transcriber.py
tests/: test_transcriber.py
youtube_transcriber/: google.py  transcriber.py
